Add informations about the fork and publish to NPM

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gstatsjs",
+  "name": "gstats",
   "version": "0.0.1",
   "description": "Show DrawCalls, FPS, Texture Count on PIXI, Phaser projects",
   "module": "dist/main.js",
