--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gstats",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Show DrawCalls, FPS, Texture Count on PIXI, Phaser projects",
   "module": "dist/main.js",
   "scripts": {
@@ -17,7 +17,7 @@
   ],
   "author": "eXponenta",
   "license": "ISC",
-  "devDependencies": {
-    "@types/pixi.js": "^4.7.0"
+  "peerDependencies": {
+    "pixi.js": "^5.0.0-rc.3"
   }
 }
