--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "Show DrawCalls, FPS, Texture Count on PIXI, Phaser projects",
   "module": "dist/main.js",
+  "main": "src/main.ts",
   "scripts": {
     "watch": "tsc -w -p .",
     "build": "tsc -p .",
